<resources>
    <string name="app_name">LeFouquetResto</string>
    <string name="home_starter">Entrées</string>
    <string name="home_dishes">Plats</string>
    <string name="home_desserts">Desserts</string>
    <string name="main_action5">Bienvenue au restaurant LeFouquet </string>
    <string name="main_action6">Faites votre choix !</string>

    <string name="item_title">Entrées</string>
    <string name="detailTitle">Ma page des details</string>
    <string name="categoryPrice">0.00€</string>

    <string name="nomPlats"></string>
    <string name="detailsDesPlats">details des plats </string>
    <string name="totalButton">Total de votre commande</string>
    <string name="quantite">0</string>

    <string name="blebut">BLUETOOTH</string>
    <string name="ble_title">Lancer le scan BLE</string>
    <string name="ble_title2">Le scan BLE charge</string>

    <string name="ble_device_status">Status : %1$s</string>
    <string name="ble_device_status_connecting">Connexion en cours</string>
    <string name="ble_device_status_disconnected"></string>
    <string name="ble_status_connected">Connecté</string>
    <string name="ble_device_status_disconnecting">Déconnexion en cours</string>

    <string name="entrerVal">Entrez une valeur</string>
    <string name="lireAction">LIRE</string>
    <string name="ecrireAction">ECRIRE</string>
    <string name="notifAction">NOTIFIER</string>
</resources>
